Revert "fix covers sizes"
This reverts commit 44f8044a7f5d845154bae96c695e3dc9952fc5fe.

--- a/app/assets/stylesheets/owl.carousel.scss
+++ b/app/assets/stylesheets/owl.carousel.scss
@@ -37,7 +37,7 @@
     -webkit-touch-callout: none; }
   .owl-carousel .owl-item img {
     display: block;
-    // width: auto;
+    width: auto;
     -webkit-transform-style: preserve-3d; }
   .owl-carousel .owl-nav.disabled,
   .owl-carousel .owl-dots.disabled {
